--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <section class="home" id="home">
         <div class="name">
             <h2>Hello I'm</h2>
-            <h1>Prince</h1>
+            <h1>Aakash</h1>
             <h4>Web-developer / Software-developer</h4>
             <a href="file/PRINCE_resume.pdf" download="Resume" class="btn">Resume</a>
         </div>
@@ -41,7 +41,7 @@
         <div class="about-text">
             <h2>About Me</h2>
             <h5>I am web developer</h5>
-            <p>Hey there, I'm Prince, a passionate Web-developer and designer with a flair for transforming ideas into captivating
+            <p>Hey there, I'm Aakash, a passionate Web-developer and designer with a flair for transforming ideas into captivating
                 visuals.Currenty in Third year of my B.tech, I'm enchancing my skills in creating impactful and user
                 friendly designs that resonate with audiences.</p>
         </div>
