--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <h2>Hello I'm</h2>
             <h1>Aakash</h1>
             <h4>Web-developer / Software-developer</h4>
-            <a href="file/PRINCE_resume.pdf" download="Resume" class="btn">Resume</a>
+            <a href="file/DTU_AAKASH_2K21_EC_002.pdf" download="Resume" class="btn">Resume</a>
         </div>
     </section>
     <section class="About" id="About">
@@ -42,7 +42,7 @@
             <h2>About Me</h2>
             <h5>I am web developer</h5>
             <p>Hey there, I'm Aakash, a passionate Web-developer and designer with a flair for transforming ideas into captivating
-                visuals.Currenty in Third year of my B.tech, I'm enchancing my skills in creating impactful and user
+                visuals.Currenty in Fourth year of my B.tech, I'm enchancing my skills in creating impactful and user
                 friendly designs that resonate with audiences.</p>
         </div>
 
@@ -68,7 +68,7 @@
     <section class="contact" id="contact">
         <div class="contact1">
             <div class="in">
-                <a href="https://www.linkedin.com/in/prince-singh-411a53239"><i class='bx bxl-linkedin-square'></i></a>
+                <a href="https://www.linkedin.com/in/aakash-kumar-rao-b41591242"><i class='bx bxl-linkedin-square'></i></a>
                 <h4>Linkedin</h4>
             </div>
 
@@ -76,7 +76,7 @@
         <div class="contact2">
             <h2>Profile</h2>
             <a href="#">Hire me</a>
-            <p>Email Id - princekanak345@gmail.com</p>
+            <p>Email Id - ak7097583@gmail.com</p>
             <p>I'm looking forward to the chance to work with you and produce something amazing.
             </p>
         </div>
@@ -85,10 +85,10 @@
   
 </body>
 <footer>
-    <h3>Prince</h3>
+    <h3>Aakash</h3>
     <p>click on the icon below to connect with me on insta</p>
     <div class="insta">
-        <a href="https://instagram.com/prince_singh_34?igshid=MzNlNGNkZWQ4Mg=="><i class='bx bxl-instagram-alt'></i></a>
+        <a href="https://www.instagram.com/aakash_kr_rao_/"><i class='bx bxl-instagram-alt'></i></a>
     </div>
     <a href="#home" class="scrollbtn"><i><i class='bx bxs-chevron-up'></i> </i></a>
 </footer>
