--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <h2>Hello I'm</h2>
             <h1>Aakash</h1>
             <h4>Web-developer / Software-developer</h4>
-            <a href="file/DTU_AAKASH_2K21_EC_002.pdf" download="Resume" class="btn">Resume</a>
+            <a href="file/files/upgrade resume.pdf" download="Resume" class="btn">Resume</a>
         </div>
     </section>
     <section class="About" id="About">
